More undestandable static files

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>The node course</title>
-    <meta name="description" content="The HTML5 Herald">
+    <title>Node.js Web Server</title>
+    <meta name="description" content="The node.js Web Server">
     <meta name="author" content="MarcoSantss">
     <link rel="stylesheet" href="/css/styles.css">
     <script src="/js/index.js"></script>
@@ -12,7 +12,7 @@
 
 <body>
     <h1>{{title}}</h1>
-    <p>Value: {{value}}</p>
+    <p>Age: {{age}} years</p>
     {{>header}}
     <img src="/img/cat.jpg" />
 </body>
